--- a/automate/manifest.json
+++ b/automate/manifest.json
@@ -3,12 +3,10 @@
   "name": "Automate Pulse Hub v2",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/automate",
-  "requirements": [],
+  "requirements": ["aiopulse2>=0.5.0"],
   "ssdp": [],
   "zeroconf": [],
   "homekit": {},
   "dependencies": [],
-  "codeowners": [
-    "@sillyfrog"
-  ]
+  "codeowners": ["@sillyfrog"]
 }
