--- a/custom_components/automate/manifest.json
+++ b/custom_components/automate/manifest.json
@@ -4,6 +4,7 @@
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/automate",
   "requirements": ["aiopulse2>=0.5.0"],
+  "issue_tracker": "https://github.com/sillyfrog/automate-ha-dev/issues",
   "ssdp": [],
   "zeroconf": [],
   "homekit": {},
