--- a/custom_components/automate/manifest.json
+++ b/custom_components/automate/manifest.json
@@ -3,11 +3,10 @@
   "name": "Automate Pulse Hub v2",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/automate",
-  "requirements": ["aiopulse2>=0.5.0"],
-  "issue_tracker": "https://github.com/sillyfrog/automate-ha-dev/issues",
-  "ssdp": [],
-  "zeroconf": [],
-  "homekit": {},
-  "dependencies": [],
-  "codeowners": ["@sillyfrog"]
+  "requirements": [
+    "aiopulse2==0.6.0"
+  ],
+  "codeowners": [
+    "@sillyfrog"
+  ]
 }
