--- a/custom_components/automate/manifest.json
+++ b/custom_components/automate/manifest.json
@@ -1,6 +1,7 @@
 {
   "domain": "automate",
   "name": "Automate Pulse Hub v2",
+  "version": "0.9.0",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/automate",
   "requirements": [
