--- a/custom_components/automate/manifest.json
+++ b/custom_components/automate/manifest.json
@@ -3,6 +3,7 @@
   "name": "Automate Pulse Hub v2",
   "version": "0.9.0",
   "config_flow": true,
+  "iot_class": "local_push",
   "documentation": "https://github.com/sillyfrog/Automate-Pulse-v2",
   "issue_tracker": "https://github.com/sillyfrog/Automate-Pulse-v2/issues",
   "requirements": [
